# file-sorter-terminal-tool

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake.yml
include/: actions.h  config.h
src/: actions.c  config.c  main.c
tools/: argumentHandler.c  argumentHandler.h  argumentParser.c  argumentParser.h  argument_parser.c  commandActions.c  command_actions.c  configHandler.c  configHandler.h  config_handler.c
tools/include/: argumentHandler.h  argumentParser.h  argument_parser.h  commandActions.h  command_actions.h  configHandler.h
tools/include/command/: command_actions.h
tools/include/config/: config_handler.h
tools/include/mem/: mem.h
tools/include/parsing/: argument_parser.h
